	* src/ibin.h, src/ibin.cpp: change parseNbins, parsePrec and
	parseScale to be static members of ibis::bin
	* doc: update documentation about the indexing option and the new
	bit-slice index class
	* tests/acmpub.csv, tests/vault/acmpub-0, tests/vault/acmpub-1:
	add test cases for new operations CONTAINS, this exercises the new
	features in keyword indexes

2012-08-06 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: change tests of the form j < dic.size() to j
	<= dic.size() because j = dic.size() is a valid code - in an
	attempt to address a question raised by Greg Barker
	* src/table.h: clarify the return value of cursor::getColumnAs___
	* src/util.cpp: update the documentation of ibis::util::strMatch

2012-07-30 John Wu <John dot Wu at ACM dot org>
	* src/i*.cpp: add statements to check for empty data partitions
	before attempting to build indexes (to address a problem reported
	by Greg Barker)
	* src/part.cpp: in part::init replace the raw pointer pname to a
	std::string to avoid memory leak issue brought up by Petr Kramolis
	* examples/ardea.cpp: write the metadata file when no external
	data is provided by the metadata is provided
	* src/tafel.cpp: in writeMetaData add code to check the sizes of
	existing files

2012-07-28 John Wu <John dot Wu at ACM dot org>
	* src/ibin.cpp:4342 comment out the line that intended to skip
	"<binning " (it has been done on line 4325
	* src/*.cpp: change all atof to strtod
	* src/qExpr.cpp, src/util.cpp: change the use of
	FASTBIT_CASE_SENSITIVE_COMPARE to be consistent with category.cpp
	and disctionary.cpp - address the problem of inconsistent case
	folding
	* examples/ibis.cpp: replace the alias _0 with cnt in
	randomQueries

2012-07-27 John Wu <John dot Wu at ACM dot org>
	* src/tafel.cpp:3011-3013 comment out the code that skips the next
	delimiter because the readString and friends have done it already
	* src/column.cpp:597 make sure jtmp is less then string length