@@ -27,14 +27,15 @@ ARDEAEXE=$(EXDIR)/ardea$(EXEEXT)
 THULAEXE=$(EXDIR)/thula$(EXEEXT)
 TCAPIEXE=$(EXDIR)/tcapi$(EXEEXT)
 #
-EXTRA_DIST=test0.csv test1.csv maurel.csv marksdb.csv \
+EXTRA_DIST=test0.csv test1.csv maurel.csv marksdb.csv acmpub.csv \
     scripts/hcompare.pl scripts/jrf-check.pl scripts/printWarning.pl \
     scripts/matchCounts.pl scripts/query-count.list \
     m4/libtool.m4 m4/ltoptions.m4 m4/ltsugar.m4 m4/ltversion.m4 \
     vault/hist0 vault/hist1 vault/hist2 vault/hist3 vault/hist4 vault/hist5 vault/hist6 \
     vault/text-0 vault/thula-0 vault/thula-1 vault/tcapi-3 vault/inRange-1 \
     vault/marksdb-1 vault/marksdb-3 vault/marksdb-4 vault/smatch-1 \
-    vault/small-1 vault/small-2 vault/small-3 vault/small-4 vault/small-5 vault/small-6 vault/small-7 vault/small-10 vault/small-11 vault/small-12 \
+    vault/acmpub-0 vault/acmpub-1 vault/small-1 vault/small-2 vault/small-3 \
+    vault/small-4 vault/small-5 vault/small-6 vault/small-7 vault/small-10 vault/small-11 vault/small-12 \
     vault/join-1 vault/join-2 vault/join-3 vault/join-4 vault/join-5 vault/join-6 vault/join-7 vault/join-8
 
 #
